# Fitness-club-accounting-system

./: pyproject.toml
db/sql_scripts/: 1.0.0_init.sql  1.0.1_alter_table_users.sql
docker /: docker-compose.yml
src/: main.py
